# ZippyLangOld

./: CMakeLists.txt  README.md  main.cpp  parser.hpp  runScript.hpp  testScript.zpy
QuickJS/: (unused)qjs.nope  (unused)qjsc.nope  CMakeLists.txt  cutils.h  libbf.c  libregexp.c  libunicode.c  quickjs-libc.c  quickjs.c  quickjs.h
helpers/: utils.hpp
js/: compiler.js
